Gallery: add project ordering and fix title overflow in gallery

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -160,28 +160,30 @@ footer {
 }
 
 .gallery-item {
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
   text-align: center;
   transition: transform 0.3s ease;
-  max-width: 250px; 
-  max-height: 300px; 
+  max-width: 250px;
 }
 
 .gallery-item img {
   width: 100%;
-  height: 85%;
+  height: auto;
   display: block;
   object-fit: cover;
   object-position: center;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
+  flex: 1 0 auto;
 }
 
 .gallery-item p {
-  margin: 13px 0;
-  font-size: .9rem;
+  margin: 10px 8px;
+  font-size: .95rem;
   color: $text-color;
+  line-height: 1.2;
+  word-break: break-word;
 }
 
 .gallery-item a {
